Added class to build graphviz graph